--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CXX_STANDARD_REQUIRED ON)
 
+#set(CMAKE_ENABLE_PROTOBUF_SECTION ON)
+
 set(SOURCE_FILES
   main.cpp
   test_module.cpp
@@ -16,7 +18,6 @@ set(SOURCE_FILES
   lesson_5.cpp
   lesson_6.cpp
   lesson_7.cpp
-  protobuf/data.pb.cc
 )
 
 set(OTHER_FILES
@@ -25,11 +26,19 @@ set(OTHER_FILES
   protobuf/data.proto
 )
 
-add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${OTHER_FILES})
+if (CMAKE_ENABLE_PROTOBUF_SECTION)
+  add_definitions(-DENABLE_PROTOBUF_SECTION)
+  list(APPEND SOURCE_FILES protobuf/data.pb.cc)
+  #include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 
-include(protobuf/conan/conanbuildinfo.cmake)
-target_include_directories(${PROJECT_NAME} PUBLIC ${CONAN_INCLUDE_DIRS_PROTOBUF})
-target_link_libraries(${PROJECT_NAME} PRIVATE ${CONAN_LIB_DIRS_PROTOBUF}/libprotobuf.lib)
+  include(protobuf/conan/conanbuildinfo.cmake)
+  add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${OTHER_FILES})
+
+  target_include_directories(${PROJECT_NAME} PUBLIC ${CONAN_INCLUDE_DIRS_PROTOBUF})
+  target_link_libraries(${PROJECT_NAME} PRIVATE ${CONAN_LIB_DIRS_PROTOBUF}/libprotobuf.lib)
+else()
+  add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${OTHER_FILES})
+endif()
 
 add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy
