Add comment to CMAKE_ENABLE_PROTOBUF_SECTION

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CXX_STANDARD_REQUIRED ON)
 
-#set(CMAKE_ENABLE_PROTOBUF_SECTION ON)
+# включение сборки и тестирования с protobuf
+set(CMAKE_ENABLE_PROTOBUF_SECTION OFF)
 
 set(SOURCE_FILES
   main.cpp
